--- a/Assignments/assignment2-MagnusDH/code/parallel/Makefile
+++ b/Assignments/assignment2-MagnusDH/code/parallel/Makefile
@@ -1,63 +1,56 @@
-#Compiler and MPI executables
-MPIRUN=$(shell which mpirun)
-
-CFLAGS = -Wall -O2 -fopenmp
-
-
 # Number of processes:
 N=6
 
 # Change this as you like:
 MPIEXEC_OPTS=--oversubscribe
 
-#Hostfile -> list of cluster nodes 
-# HOSTFILE = hostfile
+#Compiler and MPI executables
+MPIRUN=$(shell which mpirun)
 
-all: main
+CFLAGS = -Wall -O2 -fopenmp
+
+#Hostfile -> list of cluster nodes 
+HOSTFILE = hostfile
 
 
 #Build main program
 main: main.c lib/libbmp/libbmp.c lib/bmp.c
 	@mpicc -o $@ $^ -lm
 
-#	With openMP
-# 	@mpicc $(CFLAGS) -o $@ $^ -lm
+    #Create hostfile
+	@/share/ifi/available-nodes.sh > $(HOSTFILE)
 
-#	Create hostfile
-# 	@/share/ifi/available-nodes.sh > $(HOSTFILE)
+
+#Build main program with openMP
+mainMP: main.c lib/libbmp/libbmp.c lib/bmp.c
+	@mpicc $(CFLAGS) -o $@ $^ -lm
+    #Create hostfile
+	@/share/ifi/available-nodes.sh > $(HOSTFILE)
 
 
 #Run code on cluster
-run_cluster: main
-# 	@mpiexec -n $(N) --hostfile $(HOSTFILE) $(MPIEXEC_OPTS) ./main
-
-	@echo -e "\nRunning code on cluster...\n"
-	@$(MPIRUN) -np $(N) ./main
-
-# 	@$(MPIRUN) --hostfile $(HOSTFILE) -np $(N) ./main
+run_parallel: main
+	@mpiexec -n $(N) --hostfile $(HOSTFILE) $(MPIEXEC_OPTS) ./main
+    #@mpiexec -n $(N) $(MPIEXEC_OPTS) ./main
 
 
-# 	@$(MPIRUN) --hostfile $(HOSTFILE) -np $(N) $(MPIEXEC_OPTS) ./main
-
-
+#Run parallel code with multiple threads
+run_openMP: mainMP
+	@mpiexec -n $(N) --hostfile $(HOSTFILE) $(MPIEXEC_OPTS) ./mainMP
 
 
 #Run code locally
 run_local: main
-	@echo -e "\nMAKEFILE -> 'run_local:' is being run\n"
-
-	@echo -e "\nRunning code locally...\n"
-
 	@mpiexec -n $(N) $(MPIEXEC_OPTS) ./main
-
-# 	@mpiexec -n $(N) $(MPIEXEC_OPTS) ./main
 
 
 clean:
-	@rm main
-	@rm -f hostfile
-	@rm emboss.bmp
 	@rm sobel.bmp
+	@rm emboss.bmp
+	@rm -f hostfile
+	@rm main
+	@rm mainMP
+	@rm mainMP_openMP
 
 
 .PHONY: clean
